// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SettingsItem boolean type should match snapshot 1`] = `
<div
  className="css-15rdkip"
>
  <div
    className="css-aoco0s"
  />
  <div
    className="css-18jimio"
  >
    <h4
      className="css-1pb2rzu"
    >
      foo
    </h4>
    <p
      className="css-1x99lh8"
    >
      bar
    </p>
  </div>
  <div
    className="css-16bqjgr"
  >
    <div
      className="css-1tbh8fp"
      onClick={[Function]}
    >
      <div
        className="css-13eettf"
      />
    </div>
  </div>
</div>
`;

exports[`SettingsItem button type should match snapshot 1`] = `
<div
  className="css-15rdkip"
>
  <div
    className="css-aoco0s"
  />
  <div
    className="css-18jimio"
  >
    <h4
      className="css-1pb2rzu"
    >
      foo
    </h4>
    <p
      className="css-1x99lh8"
    >
      bar
    </p>
  </div>
  <div
    className="css-bidzcy"
  >
    <button
      className="css-17j2tg6"
      onClick={[Function]}
      onMouseEnter={[Function]}
      onMouseLeave={[Function]}
    >
      baz
    </button>
  </div>
</div>
`;

exports[`SettingsItem should match snapshot 1`] = `
<div
  className="css-15rdkip"
>
  <div
    className="css-aoco0s"
  />
  <div
    className="css-18jimio"
  >
    <h4
      className="css-1pb2rzu"
    >
      foo
    </h4>
    <p
      className="css-1x99lh8"
    >
      bar
    </p>
  </div>
  <div
    className="css-16bqjgr"
  >
    <div
      className="css-1tbh8fp"
      onClick={[Function]}
    >
      <div
        className="css-f93aoc"
      />
    </div>
  </div>
</div>
`;
